# jazz-midi-generator

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  THIRDPARTY.md  agent.md  pyproject.toml
data/: README.md
data/raw/: checksums.json
scripts/: train_chord_markov.py
src/jazzgen/: __init__.py  chord_theory.py  cli.py  markov_chords.py  melody_engine.py  melody_grammar.py  midi_writer.py  note_choice.py  pipeline.py  rhythm_engine.py  rhythm_patterns.py
src/jazzgen/data/: build_chord_corpus.py  build_solo_corpus.py  fetch.py
tests/: test_chord_parse.py  test_fetch.py  test_markov_chords.py  test_melody_engine.py  test_midi_writer.py  test_note_choice.py  test_pipeline.py  test_rhythm_engine.py  test_rhythm_patterns.py
